Fixed alignment of buttons

--- a/styles.css
+++ b/styles.css
@@ -80,10 +80,9 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
     padding: 8px;
     padding-left: 0;
-    padding-top: 2px;
+    padding: 2px;
 }
 
 .left {
@@ -92,13 +91,15 @@ body {
 
 #clear {
     text-align: center;
-    height: 750px;
+    /* height: 750px; */
     margin-bottom: 12px;
     width: 235px;
     border-radius: 8px;
     border: 1px solid black;
     background-color: #D1D1D1;
     font-size: 32px;
+    padding: 10px;
+    margin-top: 1px;
 }
 
 .key {
@@ -110,7 +111,6 @@ body {
     justify-content: space-evenly;
     align-items: center;
     font-size: 36px;
-    /* margin: 6px; */
 }
 
 #divide, #mult, #sub, #add, #equal {
